[project]
name = "chatterbox-tts"
version = "0.1.6"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "s3tokenizer",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "transformers>=4.40.0",
    "diffusers>=0.29.0",
    "resemble-perth>=1.0.0",
    "conformer>=0.3.0",
    "safetensors>=0.5.0",
    "spacy-pkuseg",
    "pykakasi>=2.3.0",
    "pyloudnorm",
    "omegaconf"
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
